# a-dogs-day

./: .gitignore  CMakeLists.txt  README.md
logs/: oct-25  oct-25.txt
sprites/: background.aseprite  cursor.aseprite
src/: animation.cpp  animation.h  config.h  dog_days.cpp  entities.cpp  entities.h  events.cpp  events.h  events_interface.h  game.cpp  game.h  level.cpp  level.h  player.cpp  player.h  quadtree.cpp  quadtree.h  raglib.cpp  raglib.h  sprite.cpp  sprite.h  textures.h
